# HI3520DVR

./: CMakeLists.txt  README.md  main.cpp
RecordSDK/: DevStorage.cpp  DevStorage.h  Hotplug.cpp  Hotplug.h  MediaFile.cpp  MediaFile.h  Mp4Recorder.cpp  Mp4Recorder.h  MpegMaker.cpp  MpegMaker.h  RecordLoop.cpp  RecordLoop.h  TSMaker.cpp  TSMaker.h  cMp4maker.cpp  cMp4maker.h  cdevstorage.cpp  cdevstorage.h  chotplug.cpp  chotplug.h  cmediafile.cpp  cmediafile.h  crc32.cpp  crc32.h  csaveinterface.cpp  csaveinterface.h  cstoragemanager.cpp  cstoragemanager.h  cworkdirectory.cpp  cworkdirectory.h
RecordSDK/libmpeg/source/: mpeg-ts-dec.c
ZLToolKit/Network/: TcpSession.cpp
ZLToolKit/Thread/: WorkThreadPool.cpp
ZLToolKit/Util/: mini.h
hisi/common/: loadbmp.c  sample_comm_sys.c  sample_comm_vda.c  sample_comm_vdec.c  sample_comm_venc.c  sample_comm_vi.c  sample_comm_vo.c  sample_comm_vpss.c
include/: hi_rtc.h  sample_comm.h
include/hi_include/: hi_comm_adec.h  hi_comm_aenc.h  hi_comm_aio.h  hi_comm_hdmi.h  hi_comm_ive.h  hi_comm_rc.h  hi_comm_region.h  hi_comm_sys.h  hi_comm_venc.h  hi_comm_vi.h  hi_comm_vo.h  hi_comm_vpss.h  hi_defines.h  hi_jpeg_api.h  hi_math.h  hi_md.h  hi_tde_type.h  hi_type.h  hifb.h  ivs_md.h  jerror.h  jpeglib.h  mpi_aenc.h  mpi_ai.h  mpi_ao.h  mpi_hdmi.h  mpi_ive.h  mpi_sys.h  mpi_vdec.h  mpi_venc.h  mpi_vi.h  mpi_vo.h
include/mp4v2/: project.h
lib/ffmpeg/include/libavutil/: ffversion.h
osd/: Gui_Manager.cpp  Gui_Manager.h  Osd.cpp  Osd.h  gui_manager(1).h  gui_manager.c  region_manager.c  region_manager.h
ringfifo/: CRingFifo.cpp  CRingFifo.h  CRingFifoInstance.cpp  CRingFifoInstance.h  ringfifo.c  ringfifo.h
rtsp/: RtpConnection.cpp  RtspLoop.cpp  RtspLoop.h  RtspPusher.cpp  RtspPusher.h  RtspPusherLoop.cpp  RtspPusherLoop.h  RtspServer.cpp  RtspServer.h  media.h
rtsp/xop/: EventLoop.cpp  SocketUtil.cpp
sqlite/: CppSQLite3.cpp  CppSQLite3.h  csqlitemanager.cpp  csqlitemanager.h
test/: test.cpp  test2.cpp
time/: CTimeManager.cpp  CTimeManager.h  Timer.cpp  Timer.h  ctime.cpp  ctime.h
util/: Config.cpp  Config.h  Config_Client.cpp  Config_Client.h  MainLoop.cpp  MainLoop.h  cconfig.cpp  cconfig.h  cfilewatcher.cpp  cfilewatcher.h  cinotifythread.cpp  cinotifythread.h  cthread.cpp  cthread.h  inifile.cpp  inifile.h  jsoncpp.cpp  sample_comm_ivs.c  sample_comm_ivs.h  sample_ive_main.h  sample_ivs_md.c
venc/: Hisi_Init.cpp  Hisi_Init.h  Venc.cpp  Venc.h  cvencmanager.cpp  cvencmanager.h  venc_manager.c  venc_manager.h  vivo_init.c  vivo_init.h
